--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,10 +3,10 @@
 
 <!-- Or you can load custom head-tag JavaScript: -->
 
-<!-- <script
+ <script
   src="dist/src/utils/syncTheme.js"
   type="application/javascript"
-></script> -->
+></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
